# perse

./: .gitignore  LICENSE  README.md
examples/01_buttons/: example.cpp
examples/02_textbox_list/: example.cpp
examples/03_tabs/: CMakeLists.txt  example.cpp
examples/04_menu_bar_status_bar/: example.cpp
src/backend/win32/: CMakeLists.txt  win32.c
src/frontend/cpp/: CMakeLists.txt  hooks.cpp  hooks.h  perse.cpp  perse.h  property.h  widget.cpp  widget.h
